# a2a_medical

./: README.md  ViMedical_Disease.json  ViMedical_Disease_test.json  data.ipynb  dataset_test.json  eval_outputs1.json  pyproject.toml  requirements.txt
a2a_ui/: README.md
a2a_ui/app/: host.py  main.py  routes.py
a2a_ui/app/static/: index.html
agents/: base.py
agents/booking_agent/: __main__.py  agent.py  app_5.py  db.py  db_setup.py  email_settings.py  helpers.py  seed.py  task_manager.py  view_data.py
agents/cost_agent/: __main__.py  agent.py  task_manager.py
agents/diagnose_agent/: agent.py  diagnose_demo.py  embedder.py  generator.py  preprocessor.py
agents/diagnose_rag/: __main__.py  agent.py  task_manager.py
agents/diagnose_rag/core/: __init__.py  embedder.py  generator.py  retriever.py  vector_db.py  (+1 more)
agents/schedule_agent/: __main__.py  agent.py  schedule.db  task_manager.py  tools.py
client/: app.py
client/components/: chatUI.py  history_download.py
client/utils/: api.py
common/: agent_card.py
data/: case_test_a2a.txt  chunks.jsonl  chunks_from_vimedical.jsonl  eval_logs.sqlite  goi_kham_vip_2025.json
demo/ui/: main.py  pyproject.toml
demo/ui/pages/: meidical_chat.py
demo/ui/service/server/: adk_host_manager.py  server.py
diagnose_agent/: app.py  generator.py  retriever.py  vector_db.py
host/: host.py  host_agent.py  policies.py  schemas.py
hosts/a2a_multiagent_host/: pyproject.toml
hosts/multiagent/: host_agent.py  pyproject.toml  remote_agent_connection.py  routing.py
scripts/: eval_vimedical.py  ingest.py  run_chunks.py
server/: main.py
server/modules/: diagnose_adapter.py
server/routes/: ask.py  ask_question.py  diagnose.py  upload_pdfs.py
(+6 files in other folders)
