[project]
name = "a2a-ui"
version = "0.1.0"
description = "Demo UI for A2A Hospital"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.44.0",
    "requests>=2.32.3",
    "httpx>=0.28.1",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.0",
    "starlette>=0.46.1",
    "pydantic>=2.10.6",
    "mesop>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.2",
]
