[project]
name = "a2a_multiagent_host"
version = "0.1.0"
description = "An A2A multi-agent host to demonstrate the traceability extension"
readme = "README.md"
requires-python = ">=3.10.10"
dependencies = [
    "click>=8.2.0",
    "geopy>=2.4.1",
    "google-adk>=1.7.0",
    "mcp>=1.5.0",
    "a2a-sdk>=0.3.0",
    "litellm",
]
[tool.setuptools]
packages = ["a2a_multiagent_host"]
