[project]
name = "a2a-sample-client-multiagent"
version = "0.1.0"
description = "Google ADK-based host agent that can communicate with other agents over the A2A protocol."
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "a2a-sdk>=0.3.0",
    "google-genai>=1.9.0",
    "google-adk>=1.7.0",

    # Google stack pin requests/urllib3 cũ
    "requests==2.28.1",
    "urllib3==1.26.13",

    "timestamp_ext",
]

[tool.uv.sources]
timestamp_ext = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
